# odgs-protocol

./: .dockerignore  .env.example  .gitignore  .npmignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MANIFEST.in  MIGRATION_GUIDE.md  README.md  docker-compose.yml  guide.md  ogds-final-doc.md  package-lock.json  package.json  pyproject.toml  registry.json  requirements.txt  vision.md
.github/workflows/: ci.yml
.streamlit/: config.toml
1_NORMATIVE_SPECIFICATION/: conformance_rules.md
1_NORMATIVE_SPECIFICATION/ontology/: ontology_graph.owl
1_NORMATIVE_SPECIFICATION/schemas/executive/: context_bindings.json
1_NORMATIVE_SPECIFICATION/schemas/legislative/: ontology_graph.json
1_NORMATIVE_SPECIFICATION/schemas/meta/: rule.schema.json
2_INFORMATIVE_REFERENCE/architecture/: adapter_guide.md  architecture.md  compliance_report.md  eli5_guide.md  technical_annex.md
2_INFORMATIVE_REFERENCE/src/: index.js  interceptor.js
2_INFORMATIVE_REFERENCE/src/odgs/: cli.py
2_INFORMATIVE_REFERENCE/src/scripts/: bump_version.py  migrate_v3_0_to_v3_2.py  run_all_harvesters.py  sync_schemas.py
2_INFORMATIVE_REFERENCE/tests/: demo_drive.py
2_INFORMATIVE_REFERENCE/tests/fixtures/: standard_scenarios.json
2_INFORMATIVE_REFERENCE/tests/node/: parity.test.js
2_INFORMATIVE_REFERENCE/tests/python/: test_integration_pipeline.py
demo/frontend/: package-lock.json  tailwind.config.js
demo/frontend/src/: App.jsx  index.css
deploy/: Caddyfile  README.md
directives/: generate_industry_schema.md  generate_novel_schema.md
docs/: adapter_guide.md  architecture.md  case_studies.md  comparison_matrix.md  compliance_report.md  index.md  marketing_plan.md  technical_annex.md
docs/research/: technical_note_v33.md
execution/: generate_schema.py  validate_and_feedback.py
lib/: index.js  interceptor.js
lib/schemas/: index.js
lib/schemas/judiciary/: standard_data_rules.json
lib/schemas/meta/: metric.schema.json
lib/schemas/sovereign/: 01-definitions-schema.json
odgs/: cli_main.py
odgs/scripts/: hashing.py
protocol/lib/agriculture/: ontology_graph.json  physical_data_map.json  standard_data_rules.json  standard_metrics.json
protocol/lib/critical_infrastructure/: standard_data_rules.json  standard_metrics.json
protocol/lib/education/: ontology_graph.json  physical_data_map.json  standard_data_rules.json  standard_metrics.json
protocol/lib/employment/: standard_metrics.json  (+1 more)
scripts/: banner.js  migrate_v3_0_to_v3_2.py  run_all_harvesters.py  sync_schemas.py
server/: api.py
src/odgs/: __init__.py
tests/: test_sovereign_sidecar.py
tests/node/: parity.test.js
tests/python/: test_parity.py
(+100 files in other folders)
