
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odgs"
version = "2.0.0"
description = "Internal build of the ODGS Protocol"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
odgs = "odgs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/odgs"]
